# moonraker-owl

./: Owl.Moonraker.pyproj  README.md  README.zh-CN.md  apply_phase2_rename.py  capture-start-print.jsonl  fix_syntax.py  moonraker-stream-20251102T084157Z.jsonl  moonraker-stream-20251102T151954Z.jsonl  owl.cfg  owl.cfg.example  owl.toml  owl.toml.example  pyproject.toml  requirements.lock.txt  requirements.txt
docs/: APP-REFACTORING-PLAN.md
moonraker_owl/: __init__.py  app.py  cli.py  cloud_config.py  commands.py  config.py  connection.py  constants.py  disconnect_event_publisher.py  health.py  health_publisher.py  host_metrics.py  identifiers.py  link.py  logging.py  printer_command_names.py  printer_state.py  serialization.py  telemetry.py  telemetry_backup.py  telemetry_normalizer.py  telemetry_state.py  token_manager.py  tracing.py  version.py
moonraker_owl/adapters/: __init__.py  (+8 more)
scripts/: capture_moonraker_stream.py  debug_temp.py  generate-lockfile.sh  install.sh  link.sh  uninstall.sh
systemd/: moonraker-owl.service
tests/: conftest.py  helpers.py  test_app_resilience.py  test_cadence.py  test_camera.py  test_camera_discovery.py  test_cli.py  test_cloud_config.py  test_command_injection.py  test_commands.py  test_compression.py  test_config.py  test_connection.py  test_deep_merge.py  test_disconnect_event_publisher.py  test_events.py  test_fixture_replay.py  test_gcode_upload.py  test_health.py  test_health_publisher.py  test_host_metrics.py  test_idempotency.py  test_image_preprocessor.py  test_job_registry.py  test_link.py  test_metadata_reporter.py  test_moonraker.py  test_moonraker_backend.py  test_mqtt.py  test_mqtt_topics.py  test_objects_selector.py  test_polling.py  test_protocol_contracts.py  test_remote_print.py  test_security_sprint3.py  test_sensor_filter.py  test_state_engine.py  test_task_url_hardening.py  test_telemetry.py  test_telemetry_orchestrator.py  (+6 more)
(+50 files in other folders)
