[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "moonraker-owl"
version = "0.1.0-dev"
description = "Owl Cloud companion agent for Moonraker"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Owl Engineering" }
]
requires-python = ">=3.10"
dependencies = [
  # Audit A-07: every runtime dependency carries an upper bound on the
  # next major version so an unreviewed major release cannot land on
  # operator devices via `pip install -U`. Floor versions track the
  # latest CVE-fix release in each line at audit time.
  "aiohttp>=3.10,<4",
  "paho-mqtt>=2,<3",
  "backoff>=2.2,<3",
  "pydantic>=2.7,<3",
  "cryptography>=42.0,<47",
  "Pillow>=10.3,<13",
  "tomli>=2.0,<3; python_version < '3.11'",
  "tomli-w>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-aiohttp>=1.0",
  "ruff>=0.6",
]

[project.scripts]
moonraker-owl = "moonraker_owl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["moonraker_owl"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["tests"]
